"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-04-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-19-chpsim-04-03:
	  Perm'd CHPSIM_MULTISET_EVENT_QUEUE, and there was much rejoicing...


	* HACKT-00-01-04-main-00-81-19-chpsim-04-02:
	  Started to mark initial cuts for CHPSIM_DELAYED_SUCCESSOR_CHECKS
		but far from completion (disabled with this revision).  
		We push that onto the task stack so we can first
		perm CHPSIM_MULTISET_EVENT_QUEUE, which has been stable
		for a while, and is getting to be a nuisance to read.  
		Then we'll return to regularly scheduled hacking.


	* HACKT-00-01-04-main-00-81-19-chpsim-04-01:
	  ChangeLog abuse: 
	  The goal: slack zero channels and atomic paired send/receives.
	  The plan: Change the current execution model:
		now: execute, recheck, enqueue-with-delay, execute.
		next: recheck, execute-now, first-check-after-delay, recheck
		rationale: pay prefix delay up-front before first check
	  In this revision: CHPSIM_COUPLED_CHANNEL (disabled)
		preliminary markup of support for paired-atomic event 
		execution, intended for send/receives.
		Markup not complete though, interrupted so next revision
		can markup the work necessary for execution model change.
	  Following that, we'll turn on tight coupling of channels.  


2007-04-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-19-merged-scm-01-37:
	  Branch merge of chpsim/guile/scheme dissertation work, building
		a framework for versatile trace profiling.  
	  Summary: primitives in C++/guile, scheme code, basic static
		and trace analyses, and more scheme code.
		Provide sequential and random access to tracefiles as stream.
	  Fixes: chpsim's trace_manager wasn't updating previous_events.
	  TODO: automatic documentation assembly (texinfo)

