@@ -1,6 +1,6 @@
 /**
 	\file "sim/chpsim/nonmeta_context.cc"
-	$Id: nonmeta_context.cc,v 1.3 2007/02/05 06:39:54 fang Exp $
+	$Id: nonmeta_context.cc,v 1.3.10.1 2007/04/22 01:36:56 fang Exp $
  */
 
 #include <vector>
@@ -34,8 +34,13 @@ nonmeta_context::nonmeta_context(const state_manager& s,
 				: NULL),
 			r.instances),
 		event(&e), 
+#if CHPSIM_DELAYED_SUCCESSOR_CHECKS
+		first_checks(), 
+#else
 		enqueue_list(r.__enqueue_list), 
 		rechecks(r.__rechecks), 
+#endif
+		updates(r.__updated_list),
 		event_pool(r.event_pool), 
 		trace_manager(r.get_trace_manager_if_tracing())
 		{
@@ -51,8 +56,13 @@ nonmeta_context::nonmeta_context(const state_manager& s,
 		State& r) :
 		nonmeta_context_base(s, f, NULL, r.instances),
 		event(NULL), 
+#if CHPSIM_DELAYED_SUCCESSOR_CHECKS
+		first_checks(), 
+#else
 		enqueue_list(r.__enqueue_list), 
 		rechecks(r.__rechecks), 
+#endif
+		updates(r.__updated_list),
 		event_pool(r.event_pool), 
 		trace_manager(r.get_trace_manager_if_tracing())
 		{
@@ -83,6 +93,7 @@ nonmeta_context::subscribe_this_event(void) const {
 }
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+#if !CHPSIM_DELAYED_SUCCESSOR_CHECKS
 /**
 	\pre ei is NOT already in queue
 	\post no duplicat entries in enqueue
@@ -91,6 +102,7 @@ void
 nonmeta_context::enqueue(const event_index_type ei) const {
 	enqueue_list.push_back(ei);
 }
+#endif
 
 //=============================================================================
 }	// end namespace CHPSIM
